Fix multi select item alignment

--- a/app/assets/stylesheets/externals/antd-customization.scss
+++ b/app/assets/stylesheets/externals/antd-customization.scss
@@ -10,6 +10,11 @@
     }
   }
 
+  // Fixes cross to delete items not centered in multi-select.
+  .ant-select-selection-item {
+    align-items: center;
+  }
+
   .ant-layout-header {
     background: var(--header-background-color);
     border-bottom: 1px solid var(--border-color);
